--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,7 +4,9 @@ django-cors-headers==4.6.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
 Markdown==3.7
+packaging==24.2
 pillow==11.0.0
 PyJWT==2.9.0
 sqlparse==0.5.1
